io-hotmoka-examples/src/main/java/io/hotmoka/examples/errors/illegalstaticinitialization1/C.java
package io.hotmoka.examples.errors.illegalstaticinitialization1;

public class C {
	public static int i = 13; // illegal without final
}